[gd_scene load_steps=13 format=3 uid="uid://bocyy4dtvojtt"]

[ext_resource type="Script" uid="uid://bheyb4g0ash83" path="res://Scripts/character_select.gd" id="1_ao2d1"]
[ext_resource type="Texture2D" uid="uid://b2hc0dw834q84" path="res://Assets/Character_selection/bg.png" id="1_x3kj1"]
[ext_resource type="Texture2D" uid="uid://04ejaop30rcx" path="res://Assets/Character_selection/poti1.png" id="2_05w2m"]
[ext_resource type="Texture2D" uid="uid://m820sagafw3x" path="res://Assets/Character_selection/label_cover.png" id="2_nuobu"]
[ext_resource type="Texture2D" uid="uid://ct12lbje0dq7o" path="res://Assets/Character_selection/poti3.png" id="3_aj2pa"]
[ext_resource type="Texture2D" uid="uid://l81nlyc86miq" path="res://Assets/Character_selection/poti2.png" id="4_g1wax"]
[ext_resource type="Texture2D" uid="uid://ki6w6tt5a1r8" path="res://Assets/Character_selection/matos1.png" id="5_y4yul"]
[ext_resource type="Texture2D" uid="uid://d4d5k764tta1w" path="res://Assets/Character_selection/matos3.png" id="6_k1j0j"]
[ext_resource type="Texture2D" uid="uid://byp0mkq4nvyah" path="res://Assets/Character_selection/matos2.png" id="7_nuobu"]
[ext_resource type="Texture2D" uid="uid://u0aw6xrkvmk4" path="res://Assets/Character_selection/tziki1.png" id="8_t4s0d"]
[ext_resource type="Texture2D" uid="uid://bjnaae8ce633d" path="res://Assets/Character_selection/tziki3.png" id="9_ndh8l"]
[ext_resource type="Texture2D" uid="uid://condxma3b55ar" path="res://Assets/Character_selection/tziki2.png" id="10_gvt7l"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_ao2d1")

[node name="SelectedPreview" type="TextureRect" parent="."]
offset_right = 1534.0
offset_bottom = 1024.0
texture = ExtResource("2_nuobu")

[node name="background" type="TextureRect" parent="SelectedPreview"]
layout_mode = 0
offset_right = 1536.0
offset_bottom = 1024.0
texture = ExtResource("1_x3kj1")

[node name="poti" type="TextureButton" parent="SelectedPreview"]
layout_mode = 0
offset_top = 250.0
offset_right = 576.0
offset_bottom = 1273.0
scale = Vector2(0.75, 0.75)
texture_normal = ExtResource("2_05w2m")
texture_pressed = ExtResource("3_aj2pa")
texture_hover = ExtResource("4_g1wax")
stretch_mode = 0

[node name="matos" type="TextureButton" parent="SelectedPreview"]
layout_mode = 0
offset_left = 451.0
offset_top = 250.0
offset_right = 1027.0
offset_bottom = 1273.0
scale = Vector2(0.75, 0.75)
texture_normal = ExtResource("5_y4yul")
texture_pressed = ExtResource("6_k1j0j")
texture_hover = ExtResource("7_nuobu")
stretch_mode = 0

[node name="tziki" type="TextureButton" parent="SelectedPreview"]
layout_mode = 0
offset_left = 900.0
offset_top = 250.0
offset_right = 1476.0
offset_bottom = 1273.0
scale = Vector2(0.75, 0.75)
texture_normal = ExtResource("8_t4s0d")
texture_pressed = ExtResource("9_ndh8l")
texture_hover = ExtResource("10_gvt7l")
stretch_mode = 0

[node name="label_bg" type="TextureRect" parent="SelectedPreview"]
layout_mode = 0
offset_left = 536.0
offset_top = 20.0
offset_right = 998.0
offset_bottom = 323.0
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_nuobu")

[node name="name_label" type="Label" parent="SelectedPreview"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.026
anchor_bottom = 0.042
offset_left = 492.0
offset_top = 35.0
offset_right = 829.116
offset_bottom = 69.992
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
horizontal_alignment = 1
vertical_alignment = 1

[node name="start_button" type="Button" parent="SelectedPreview"]
layout_mode = 0
offset_left = 600.0
offset_top = 181.0
offset_right = 801.0
offset_bottom = 241.0
text = "התחל משחק"

[node name="CharacterSelect" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -110.0
offset_top = 85.0
offset_right = -70.0
offset_bottom = 125.0

[node name="character_sound_player" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="SelectedPreview/start_button" to="." method="_on_start_button_pressed"]
